--- a/exts/omni.example.apiconnect/config/extension.toml
+++ b/exts/omni.example.apiconnect/config/extension.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 
 # The title and description fields are primarily for displaying extension info in UI
 title = "API Connect Sample"
-description="The simplest python extension example. Use it as a starting point for your extensions."
+description="A sample extension that demonstrate how to connect to an API. In this sample we use the HueMint.com API to generate a set of colors."
 
 # Path (relative to the root) or content of readme markdown file for UI.
 readme  = "docs/README.md"
