Fixed typo, added docstring, timeout fn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -407,12 +407,17 @@
     "python.defaultInterpreterPath": "${workspaceFolder}/app/kit/python/python.exe",
 
     // We use "black" as a formatter:
-    "python.formatting.provider": "black",
+    "python.formatting.provider": "none",
     "python.formatting.blackArgs": ["--line-length", "120"],
 
     // Use flake8 for linting
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": ["--max-line-length=120"]
+    "python.linting.flake8Args": [
+        "--max-line-length=120"
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    }
 }
